# pooltool

./: .coderabbit.yaml  .env.copy  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  PYPI.md  README.md  benchmark_long.pkl  benchmark_long.py  benchmark_long_visualize.py  benchmark_short.pkl  benchmark_short.py  codecov.yml  environment.yml  get_benchmark_configuration.py  main.py  menus.xml  mypy.ini  paper.bib  paper.md  pyproject.toml  pyrightconfig.ci.json  renovate.json  requirements-dev.txt  requirements-extras.txt  requirements.txt  requirements_developer.txt  response.md  run_pooltool  run_pooltool.bat  setup.cfg  setup.py  test.json  (+1 more)
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  lint-and-check.yml  lint-and-test.yml  lint.yml  paper.yml  test-test.yml  test.yml  typecheck.yml
Scripts/: Ersin_table.py
autosummary/: base.rst  class.rst
config/: settings  tables
docs/: .gitignore  Makefile  README.md  clean_enum_signature.py  conf.py  contributing.md  custom_directives.py  custom_extensions.py  custom_skip_members.py  exclusion_patterns.txt  fix_dataclass_defaults.py  include_exclude.py  index.md  index.rst  install.md  install.rst  local.sh  parse_exclusions.py  publish_instructions.md  requirements.txt  resolve_missing_references.py  restructure_class_layout.py  test_custom_extensions.py
docs/_static/: custom.css
docs/contributing/: index.md
docs/examples/: 30_degree_rule.ipynb  30_degree_rule.pct.py  README.md  index.md  straight_shot.ipynb  straight_shot.pct.py
docs/getting_started/: hello_world.md  index.md  install.md  interface.md  script.md
docs/license/: index.md
docs/meta/: code_of_conduct.md  contributing.md  developer_guide.md
docs/reference/: index.rst
docs/resources/: custom_physics.md  index.md  table_specs.md
docs/source/: modules.rst  pooltool.ai.action.rst  pooltool.ai.aim.core.rst  pooltool.ai.aim.rst  pooltool.ai.pot.core.rst  pooltool.ai.pot.rst  pooltool.ai.rst  pooltool.constants.rst  pooltool.error.rst  pooltool.events.datatypes.rst  pooltool.events.filter.rst  pooltool.events.rst  pooltool.evolution.continuize.rst  pooltool.evolution.event_based.config.rst  pooltool.evolution.event_based.rst  pooltool.evolution.event_based.simulate.rst  pooltool.evolution.event_based.solve.rst  pooltool.evolution.rst  pooltool.game.datatypes.rst  pooltool.game.layouts.rst  pooltool.game.rst  pooltool.game.ruleset.datatypes.rst  pooltool.game.ruleset.eight_ball.rst  pooltool.game.ruleset.nine_ball.rst  pooltool.game.ruleset.rst  pooltool.game.ruleset.sandbox.rst  pooltool.game.ruleset.snooker.balls.rst  pooltool.game.ruleset.snooker.core.rst  pooltool.game.ruleset.snooker.rst  pooltool.game.ruleset.snooker.utils.rst  pooltool.game.ruleset.sum_to_three.rst  pooltool.game.ruleset.three_cushion.rst  pooltool.game.ruleset.utils.rst  pooltool.objects.ball.datatypes.rst  pooltool.objects.ball.params.rst  pooltool.objects.ball.rst  pooltool.objects.ball.sets.rst  pooltool.objects.cue.datatypes.rst  pooltool.objects.cue.rst  pooltool.objects.datatypes.rst  (+44 more)
docs/user_guide/: index.rst
logo/: logo.blend  logo.pptx  ~$logo.pptx
models/: cylinder.egg  sphere.bam
models/blender/: 10_ball.blend  10_ball_UV.blend  10_ball_UV.blend1  1_ball_UV.blend  2_ball_UV.blend  2_ball_UV.blend1  3_ball_UV.blend  4_ball_UV.blend  5_ball_UV.blend  6_ball_UV.blend  7_ball_UV.blend  8_ball_UV.blend  8_ball_UV.blend1  cue_ball_UV.blend  cue_ball_UV.blend1  donnie_boy.blend  sphere.blend
models/cue/: cue.blend  cue.blend1  cue.glb
models/hud/: assets.pptx
models/table/: 7_foot.blend  7_foot.blend1  7_foot.glb  7_foot_pbr.blend  custom.blend  custom.blend1  custom.glb  table_default.blend  table_default.blend1  table_default.glb  table_test.blend  table_test.blend1  table_test.glb
narrative/: 2020_05_20-introduction.md  2020_05_25-preliminary_research.md  2020_05_26-starting-a-massive-project-is-hard.md  narrative.md
narrative/media/: 2013_project.py
paper/: paper.bib  paper.md
pooltool/: Config.prc  __init__.py  configurations.py  constants.py  engine.py  error.py  events.py  evolution.py  interact.py  layouts.py  main.py  math.py  objects.py  physics.py  system.py  terminal.py  test_layouts.py  user_config.py  utils.py
pooltool/ai/: __init__.py  action.py  datatypes.py  image_representation.py  interface.py  unintelligent.py  utils.py
pooltool/ani/: __init__.py  action.py  animate.py  animate2d.py  animate3d.py  camera.py  collision.py  constants.py  environment.py  globals.py  hud.py  image.py  menu.py  menu2.py  mouse.py  scene.py  tasks.py  utils.py
pooltool/config/: README.md  __init__.py  config_panda3d.prc  menus.xml  paths.py  settings  tables
pooltool/events/: __init__.py  _events.py  datatypes.py  factory.py  filter.py  resolve.py  test_events.py  test_filter.py  test_resolve.py  utils.py
pooltool/evolution/: __init__.py  continuize.py  continuous.py  engine.py
pooltool/game/: __init__.py  datatypes.py  layouts.py  test_layouts.py
pooltool/games/: __init__.py  datatypes.py  eight_ball.py  nine_ball.py  sandbox.py  snooker.py  three_cushion.py
psim/: Config.prc  __init__.py  configurations.py  engine.py  events.py  objects.py  physics.py  terminal.py  utils.py
psim/ani/: menu.py  (+10 more)
sandbox/: 30_degree_rule.ipynb  30_degree_rule.py  TP_A-14_plots.py  TP_A-27_plots.py  airborne_demos.py  arena.py  ball_ball_collisions.py  ball_ball_spin_transfer_plots.py  ball_cushion_collisions.py  best_break.pkl  best_break.py  best_break_stats.pkl  break.py  break_forever.py  calculate_continuize_render_times.py  collection.py  continuize_and_render_timer.py  copy_save_load.py  custom_table.py  fireball.py  load.py  looseness.py  newtons_cradle.py  nine_ball_game.py  offscreen.py  parallel_playback.py  save_load_copy_system_state.py  serialize.py  simple.py  stronge_plots.py  timing.msgpack  z_drift_debug.py
tests/: _helpers.py  test_layouts.py
theory/: ball_ball_time.mw  ball_cushion_inhwan_han.mw  ball_rail_time.mw
(+784 files in other folders)
